calamares-settings-ubuntu (1:24.04.1) UNRELEASED; urgency=medium

  * Fix Vcs-*.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 08 Oct 2023 22:02:44 -0500

calamares-settings-ubuntu (1:23.10.4) mantic; urgency=medium

  * Remove the Partners repository as an option.
  * Use geoip.ubuntu.com by default.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 08 Oct 2023 11:53:28 -0500

calamares-settings-ubuntu (1:23.10.3) mantic; urgency=medium

  * No-change rebuild. 

 -- Walter Lapchynski <wxl@ubuntu.com>  Sun, 10 Sep 2023 10:05:21 -0700

calamares-settings-ubuntu (1:23.10.2) mantic; urgency=medium

  * Update welcome image for Mantic in Lubuntu.

 -- Walter Lapchynski <wxl@ubuntu.com>  Sun, 10 Sep 2023 09:03:28 -0700

calamares-settings-ubuntu (1:23.10.1) mantic; urgency=medium

  * Welcome to the Mantic Minotaur!
  * Add ext4, btrfs, xfs file system options on erase disk for Lubuntu.

 -- Dan Simmons <kc2bez@lubuntu.me>  Mon, 14 Aug 2023 20:10:37 -0400

calamares-settings-ubuntu (1:23.04.12) lunar; urgency=medium

  * Don't allow the first user to be created with a blank password in either
    Lubuntu or Ubuntu Studio. (LP: #2016436)

 -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Sun, 16 Apr 2023 17:34:56 -0500

calamares-settings-ubuntu (1:23.04.11) lunar; urgency=medium

  * Fixed an invalid "SidebarTextSelect" field in Lubuntu's branding.desc -
    this is now called "SidebarTextCurrent".

 -- Aaron Rainbolt <arraybolt3@ubuntu.com>  Mon, 20 Mar 2023 17:47:40 -0500

calamares-settings-ubuntu (1:23.04.10) lunar; urgency=medium

  * Fix Ubuntu Studio sidebar colors

 -- Erich Eickmeyer <eeickmeyer@ubuntu.com>  Mon, 20 Mar 2023 11:49:08 -0700

calamares-settings-ubuntu (1:23.04.9) lunar; urgency=medium

  * Update ubuntustudio slideshow

 -- Erich Eickmeyer <eeickmeyer@ubuntu.com>  Sat, 18 Mar 2023 08:46:57 -0700

calamares-settings-ubuntu (1:23.04.8) lunar; urgency=medium

  * Made the slideshow loop again. (Slow systems were ending up on the "The