@@ -1,0 +1,5 @@
+<!DOCTYPE RCC><RCC version="1.0">
+<qresource>
+  <file alias="pkgselect.qml">pkgselect.qml</file>
+</qresource>
+</RCC>
