@@ -26,6 +26,7 @@ sequence:
   - welcome
   - locale
   - keyboard
+  - pkgselect
   - partition
   - users
   - summary
